# google_vit_Proyect

./: .gitignore  CMakeLists.txt  VISUAL_GUIDE.md  main.cpp  main_cuda.cpp  pasos.txt  patches_00001.csv
include/: Dense.h  Gelu.h  InputBuilder.h  MultiHeadSelfAttention.h  PatchEmbedder.h  TransformerEncoderLayer.h  VisionTransformerEncoder.h  layerNorm.h  matrix.h
pesos/: classifier_bias.csv  vit_embeddings_cls_token.csv  vit_embeddings_patch_embeddings_projection_bias.csv  vit_embeddings_position_embeddingsV2.csv  vit_encoder_layer_0_attention_attention_key_bias.csv  vit_encoder_layer_0_attention_attention_query_bias.csv  vit_encoder_layer_0_attention_attention_value_bias.csv  vit_encoder_layer_0_attention_output_dense_bias.csv  vit_encoder_layer_0_intermediate_dense_bias.csv  vit_encoder_layer_0_layernorm_after_bias.csv  vit_encoder_layer_0_layernorm_after_weight.csv  vit_encoder_layer_0_layernorm_before_bias.csv  vit_encoder_layer_0_layernorm_before_weight.csv  vit_encoder_layer_0_output_dense_bias.csv
src/: Dense.cpp  Gelu.cpp  InputBuilder.cpp  MultiHeadSelfAttention.cpp  PatchEmbedder.cpp  TransformerEncoderLayer.cpp  VisionTransformerEncoder.cpp  layerNorm.cpp  matrix.cpp  matrix_cuda.cu
